<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonitorEnergie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="releve">Relevé</string>
    <string name="index">Mes index</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user">Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="fluids">Liste des fluides</string>
    <string name="title_activity_index_list">IndexListActivity</string>

</resources>
