<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_releve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/releve" />
    <Button
        android:id="@+id/button_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/index" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
    <Button
        android:id="@+id/button_fluids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fluids" />
    
    <TextView
        android:id="@+id/textView_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
         />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
         />

    <TextView
        android:id="@+id/textView_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
         />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
</LinearLayout>
